@@ -1042,7 +1042,7 @@ cannot use <code>$N</code> in the substitution string!
         <td>last|L</td>
         <td>Stop the rewriting process immediately and don't apply any
         more rules. Especially note caveats for per-directory and
-        .htaccess context. <em><a
+        .htaccess context (see also the END flag). <em><a
         href="../rewrite/flags.html#flag_l">details ...</a></em></td>
     </tr>
     <tr>
@@ -1101,6 +1101,13 @@ cannot use <code>$N</code> in the substitution string!
         HTTP status code. <em><a
         href="../rewrite/flags.html#flag_r">details ...</a></em>
         </td>
+    </tr>
+    <tr>
+        <td>END</td>
+        <td>Stop the rewriting process immediately and don't apply any
+        more rules. Also prevents further execution of rewrite rules
+        in per-directory and .htaccess context. (Available in 2.3.9 and later)
+        <em><a href="../rewrite/flags.html#flag_l">details ...</a></em></td>
     </tr>
     <tr>
         <td>skip|S=<em>num</em></td>
