@@ -6,6 +6,10 @@ Changes with Apache 2.3.9
      Fix a denial of service attack against mod_reqtimeout.
      [Stefan Fritsch]
 
+  *) mod_rewrite: Add END flag for RewriteRule to prevent further rounds
+     of rewrite processing when a per-directory substitution occurs.
+     [Eric Covener]
+
   *) mod_ssl: Make sure to always log an error if loading of CA certificates
      fails. PR 40312. [Paul Tiemann <issues apache org ourdetour com>]
 
